# hw5_aysu_ale

./: .coverage  README.md  coverage.xml  requirements.txt  setup.cfg  setup.py
.pylint.d/: test_hw51.stats
diabetes/: question7.ipynb
diabetes/.ipynb_checkpoints/: question7-checkpoint.ipynb
diabetes/.pylint.d/: hw5_ADEMIR_AMALAGA1.stats
src/pink/: clean.py  estimate.py  hw5.py
src/pink_pkg_aysu_ale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_hw5.py
