[metadata]
name = pink
version = 0.0.1
author = Alexandra Malaga, Aysu Demir
author_email = alexandra.malaga@bse.eu, aysu.demir@bse.eu
description = this is an example package for Computing for Data Science class
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whatcanaysu/hw5_aysu_ale
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src